hspace-ops/modules/base/sg_bastion.tf
resource "aws_security_group" "bastion" {
  name        = "bastion_sg"
  description = "Allow only inbound ssh traffic"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  lifecycle {
    create_before_destroy = true
  }

  vpc_id = module.vpc.id
}
